# winscore-app

./: .gitignore  PROMPT_CRYPTO.md  README.md  biome.json  i18n.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  turbo.json
.husky/: pre-push
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.alt.txt  sitemap.ts
components/: bracket-live-refresh.tsx  bracket-match-card.tsx  bracket-rounds-mobile.tsx  bracket-view.tsx  competition-section-nav.tsx  fixtures-strip.tsx  group-standings-table.tsx  kickoff-countdown.tsx  language-switcher.tsx  leaderboard-live.tsx  leaderboard-segment-switcher.tsx  leaderboard-table.tsx  league-lane.tsx  league-rail.tsx  league-standings-table.tsx  live-events-feed.tsx  live-match-list.tsx  local-time.tsx  logotype.tsx  match-day-section.tsx  match-state-badge.tsx  match-status-filter.tsx  match-team-filter.tsx  mini-bracket.tsx  needs-pick-toggle.tsx  pagination-controls.tsx  pending-picks-nudge.tsx  picks-vs-results.tsx  recap-reactions.tsx  scoreline.tsx  scoring-explainer.tsx  share-buttons.tsx  site-nav-client.tsx  site-nav.tsx  solana-provider.tsx  stage-icon.tsx  standing-cards.tsx  (+7 more)
solana/winscore-wager/programs/winscore-wager/: Cargo.toml
solana/winscore-wager/programs/winscore-wager/src/: constants.rs  error.rs  lib.rs  state.rs
solana/winscore-wager/programs/winscore-wager/src/instructions/: cancel_and_refund.rs  claim.rs  close.rs  enter.rs  initialize_wager_round.rs  lock.rs  mod.rs  settle.rs  shorten_close.rs
solana/winscore-wager/programs/winscore-wager/tests/: test_initialize.rs
(+509 files in other folders)
